@@ -40,3 +40,11 @@ HORAS TRABALHADAS: 6h
 - Inclusao de listagem de articles no modo all
 
 HORAS TRABALHADAS: 4h
+
+==========
+10/05/2009
+==========
+
+- Inclusao de listagem de feeds no dashboard, modos all e threaded
+
+HORAS TRABALHADAS: 4h
